=======
CHANGES
=======

0.10.1 (unreleased)
-------------------

- Fixed UnicodeDecodeError for notification event subscriber.
  [taito.horiuchi]

- updated German translation [fRiSi]

- don't show the buy/donate portlet when displaying the shopping cart
  (therefore added marker view ICartView for cart related views)
  [fRiSi]

0.10.0 (2010-05-19)
-------------------

- Update variable amount donation portlet to avoid submitting via javascript.
  [jesses, alext]

- Update the cart formatter extra section to be rendered using a template.
  [cewing, alext]

- Added support for recurring payable items.  If upgrading from an older
  version of PloneGetPaid, you'll need to reinstall PloneGetPaid to add a new
  portlet and action.
  [jpg.rcom, davisagli, jesses, alext, cewing, larubbio]

- Added missing dependency declaration for getpaid.nullpayment.
  [davisagli]

- Added conditional imports to test files and various fixes for Plone 4
  compatibility.
  [taito.horiuchi]

- Added icon_expr to controlpanel.xml.
  [taito.horiuchi]

0.9.1 (2010-04-07)
------------------

- Added missing dependency declarations for five.intid, ore.viewlet and
  yoma.batching.
  [davisagli]

0.9.0 (2010-04-07)
------------------

- Updated templates for compatibility with Plone 4 in addition to Plone 3.
  [davisagli, azazel]

- Removed various bits of BBB code for Zope 2.9 and Plone 2.5, which have not
  been supported for a while already.
  [davisagli, azazel]

- Removed registration of the Payable object tab as a Zope 3 browser menu
  (which was BBB for Plone 2.5 and doesn't work with CMF 2.2)
  [davisagli]

- Added various conditional imports for Plone 4 compatibility.
  [taito.horiuchi, davisagli]

0.8.8 (2010-02-02)
------------------
- Rebundle again with upgraded setuptools

0.8.7 (2010-02-01)
------------------
- Rebundle to fix missing files

0.8.6 (2010-01-21)
------------------
- Add a workaround for free shipping bug (#274)
- Fix a broken test by updating the year
